--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,7 @@
-image: gitpod/workspace-full
-vscode:
-  extensions:
-    - abusaidm.html-snippets@0.2.1:7b7Vkkp6Lem9WOqKCYMq2w==
-    - Zignd.html-css-class-completion@1.19.0:b3YWQQIEP1z3u93nyLX0UA==
+tasks:
+  - name: Start web server
+    init: python -m http.server 8000
+
+ports:
+  - port: 8000
+    onOpen: open-preview
