feat: usa browser-sync para preview do html

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,9 @@
 tasks:
-  - name: Start web server
-    init: python -m http.server 8000
+  - before: |
+      npm install -g browser-sync
+      npm install -g npm@8.11.0
+    command: browser-sync . -w
 
 ports:
-  - port: 8000
+  - port: 3000
     onOpen: open-preview
